--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 RSA_PUBLIC_KEY=C:/TYProject/parent-encryption/keys/public_key.pem
 RSA_PRIVATE_KEY=C:/TYProject/parent-encryption/keys/private_key.pem
 FOLDER_PATH=C:/TYProject/parent-encryption
-ALLOWED_ORIGINS=https://parent-rest-api.onrender.com,https://parent-machinelearning.onrender.com,http://localhost:3000,http://localhost:8001,http://localhost:5000
-
+ALLOWED_ORIGINS=https://psat-webapp.netlify.app/,https://parent-encryption.onrender.com,https://parent-rest-api.onrender.com,https://parent-machinelearning.onrender.com,http://localhost:3000,http://localhost:8001,http://localhost:5000
